--- a/public/css/custom-icons/my-icons-codes.css
+++ b/public/css/custom-icons/my-icons-codes.css
@@ -28,3 +28,6 @@
 .icon-emo-happy:before { content: '\e81a'; } /* '' */
 .icon-emo-displeased:before { content: '\e81b'; } /* '' */
 .icon-down-dir:before { content: '\e81c'; } /* '' */
+.icon-info-circled:before { content: '\e81d'; } /* '' */
+.icon-exchange:before { content: '\e81e'; } /* '' */
+.icon-arrows-cw:before { content: '\e81f'; } /* '' */
