--- a/public/css/custom-icons/my-icons.css
+++ b/public/css/custom-icons/my-icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'my-icons';
-  src: url('../font/my-icons.eot?30626671');
-  src: url('../font/my-icons.eot?30626671#iefix') format('embedded-opentype'),
-       url('../font/my-icons.woff?30626671') format('woff'),
-       url('../font/my-icons.ttf?30626671') format('truetype'),
-       url('../font/my-icons.svg?30626671#my-icons') format('svg');
+  src: url('../font/my-icons.eot?9916293');
+  src: url('../font/my-icons.eot?9916293#iefix') format('embedded-opentype'),
+       url('../font/my-icons.woff?9916293') format('woff'),
+       url('../font/my-icons.ttf?9916293') format('truetype'),
+       url('../font/my-icons.svg?9916293#my-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'my-icons';
-    src: url('../font/my-icons.svg?30626671#my-icons') format('svg');
+    src: url('../font/my-icons.svg?9916293#my-icons') format('svg');
   }
 }
 */
@@ -83,3 +83,6 @@
 .icon-emo-happy:before { content: '\e81a'; } /* '' */
 .icon-emo-displeased:before { content: '\e81b'; } /* '' */
 .icon-down-dir:before { content: '\e81c'; } /* '' */
+.icon-info-circled:before { content: '\e81d'; } /* '' */
+.icon-exchange:before { content: '\e81e'; } /* '' */
+.icon-arrows-cw:before { content: '\e81f'; } /* '' */
